[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Slider.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Line2D_eigens.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Line2D.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Line2D_eigenvalue_axis.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Line2D_eigenvector_axis.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="ColorRect" parent="."]
margin_left = -0.0744605
margin_top = -3.44193
margin_right = 2047.92
margin_bottom = 1532.56
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.517647, 0.541176, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D_eigenvalue_axis" type="Line2D" parent="."]
script = ExtResource( 4 )

[node name="Label_x_axis" type="Label" parent="Line2D_eigenvalue_axis"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_y_axis" type="Label" parent="Line2D_eigenvalue_axis"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D_eigenvector_axis" type="Line2D" parent="."]
script = ExtResource( 5 )

[node name="Label_x_axis" type="Label" parent="Line2D_eigenvector_axis"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_y_axis" type="Label" parent="Line2D_eigenvector_axis"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D_eigens" type="Line2D" parent="."]
script = ExtResource( 2 )

[node name="Line2D_evolution" type="Line2D" parent="."]
width = 0.1
default_color = Color( 0.870588, 0.0823529, 0.784314, 1 )
script = ExtResource( 3 )

[node name="Timer_draw_evolution" type="Timer" parent="Line2D_evolution"]

[node name="Timer2_wait" type="Timer" parent="Line2D_evolution"]

[node name="Line2D_Slider" type="Line2D" parent="Line2D_evolution"]
script = ExtResource( 1 )

[node name="HSlider00" type="HSlider" parent="Line2D_evolution/Line2D_Slider"]
margin_left = 200.0
margin_top = 55.0
margin_right = 460.0
margin_bottom = 71.0
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label00" type="Label" parent="Line2D_evolution/Line2D_Slider/HSlider00"]
margin_left = -140.0
margin_right = -18.0
margin_bottom = 17.0
text = "Matrix element 00:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider01" type="HSlider" parent="Line2D_evolution/Line2D_Slider"]
margin_left = 200.0
margin_top = 85.0
margin_right = 460.0
margin_bottom = 101.0
min_value = -2.0
max_value = 2.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label01" type="Label" parent="Line2D_evolution/Line2D_Slider/HSlider01"]
margin_left = -140.0
margin_right = -18.0
margin_bottom = 14.0
text = "Matrix element 01:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider10" type="HSlider" parent="Line2D_evolution/Line2D_Slider"]
margin_left = 200.0
margin_top = 115.0
margin_right = 460.0
margin_bottom = 131.0
min_value = -2.0
max_value = 2.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="Line2D_evolution/Line2D_Slider/HSlider10"]
margin_left = -140.0
margin_right = -18.0
margin_bottom = 14.0
text = "Matrix element 10:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider11" type="HSlider" parent="Line2D_evolution/Line2D_Slider"]
margin_left = 200.0
margin_top = 145.0
margin_right = 460.0
margin_bottom = 161.0
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="Line2D_evolution/Line2D_Slider/HSlider11"]
margin_left = -140.0
margin_right = -18.0
margin_bottom = 14.0
text = "Matrix element 11:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Line2D_evolution/Timer_draw_evolution" to="Line2D_evolution" method="_on_Timer_draw_evolution_timeout"]
[connection signal="timeout" from="Line2D_evolution/Timer2_wait" to="Line2D_evolution" method="_on_Timer2_wait_timeout"]
